--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>My Resume HTML Bootstrap Template</title>
+  <title>My Resume</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,13 @@
       <div class="container">
         <div class="heading text-center">
           <h2>About Me</h2>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros. Etiam ullamcorper sed lectus sit amet mattis. Morbi justo sem, cursus nec convallis a, pellentesque eu mi. Morbi hendrerit ultricies ligula </h3>
+          <h3>Hi!. If your senior leadership team could benefit from an accomplished and vision driven professional, look no further than me, I am the best choice. I am highly motivated Data Analyst with vast knowledge in interpreting, analysing, and reconciliation of structured and unstructured data, obtained from a variety of sources and making machine learning/Artificial intelligence modelling for predictive analysis.
+
+Staying up to date and informed about breakthrough artificial intelligence (AI) technologies with the potential to transform business, the workforce or consumer experience. Experience working with AI technologies specially machine learning, NLP. Excel at creating data driven systems and have experience in statistical programming, machine learning, NLP, Al, and data mining. Technology consultant talented at identifying emerging technologies that fully leverage the capabilities of existing databases. Worked extensively on Java, Python, Html, CSS, and frontend and backend development.
+
+Supervised, semi supervised and unsupervised machine learning using Python scikit learn and Amazon Machine learning. Good understanding of CNNs, RNNs, reinforcement learning.
+
+Connect with me today to find out how I will make your mission my mission, to help bring all of your business objectives into focus! Please feel free to contact me at monika.singh4@mail.dcu.ie with any thoughts, comments, or questions about my work – I am always interested in making new professional acquaintances</h3>
         </div>
         <div class="row">
           <div class="col-md-6">
