--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>My Resume</title>
+  <title>Monika</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -17,12 +17,7 @@
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
-  <!-- =======================================================
-    Theme Name: MyResume
-    Theme URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
+
 </head>
 
 <body>
@@ -33,7 +28,7 @@
           <div class="parallax-pattern-overlay">
             <div class="container text-center" style="height:600px;padding-top:170px;">
               <a href="#"><img id="site-title" class=" wow fadeInDown" wow-data-delay="0.0s" wow-data-duration="0.9s" src="img/2.png" alt=""/></a>
-              <h2 class="intro"><a href="index.html">My Resume</a></h2>
+              <h2 class="intro"><a href="index.html">Monika Kumar</a></h2>
             </div>
           </div>
         </div>
@@ -48,7 +43,7 @@
                     <div class="navbar-collapse collapse">
                       <ul class="nav navbar-nav">
                         <li class="menuItem active"><a href="#wrapper">Home</a></li>
-                        <li class="menuItem"><a href="#aboutus">About Us</a></li>
+                        <li class="menuItem"><a href="#aboutus">About Me</a></li>
                         <li class="menuItem"><a href="#specialties">Skills</a></li>
                         <li class="menuItem"><a href="#gallery">Portfolio</a></li>
                         <li class="menuItem"><a href="#feedback">Education</a></li>
@@ -69,14 +64,17 @@
       <div class="container">
         <div class="heading text-center">
           <h2>About Me</h2>
-          <h3>Hi I am Monika</h3>
+          <h3>Hi!. If your senior leadership team could benefit from an accomplished and vision driven professional, look no further than me, I am the best choice. I am highly motivated Data Analyst with vast knowledge in interpreting, analysing, and reconciliation of structured and unstructured data, obtained from a variety of sources and making machine learning/Artificial intelligence modelling for predictive analysis.
+Staying up to date and informed about breakthrough artificial intelligence (AI) technologies with the potential to transform business, the workforce or consumer experience. Experience working with AI technologies specially machine learning, NLP. Excel at creating data driven systems and have experience in statistical programming, machine learning, NLP, Al, and data mining. Technology consultant talented at identifying emerging technologies that fully leverage the capabilities of existing databases. Worked extensively on Java, Python, Html, CSS, and frontend and backend development.
+Supervised, semi supervised and unsupervised machine learning using Python scikit learn and Amazon Machine learning. Good understanding of CNNs, RNNs, reinforcement learning.
+Connect with me today to find out how I will make your mission my mission, to help bring all of your business objectives into focus! Please feel free to contact me at monikakumar2928@gmail.com with any thoughts, comments, or questions about my work – I am always interested in making new professional acquaintances</h3>
         </div>
         <div class="row">
           <div class="col-md-6">
             <div class="papers text-center">
               <img src="img/team/1.jpg" alt=""><br/>
-              <a href="#"><b>Download my resume</b></a>
-              <h4 class="">My Teacher John Vandeley</h4>
+              <a href="#"><b>Download My Resume</b></a>
+              <h4 class="">My Colleague Sean Healy</h4>
               <p>
                 Have you ever felt worried that your party will not raise up to your guest expectations? In design, vertical rhythm is the structure that guides a reader's eye through the content. Good vertical rhythm makes a layout more balanced and beautiful and its
                 content more readable. The time signature in sheet music visually depicts a song's rhythm, while for us, the lines of the baseline grid depict the rhythm of our content and give us guidelines.
@@ -87,7 +85,7 @@
             <div class="papers text-center">
               <img src="img/team/2.jpg" alt=""><br/>
               <a href="#"><b>Download my resume</b></a>
-              <h4 class="">My Teacher Stephanie Hellen</h4>
+              <h4 class="">My Colleague David Power</h4>
               <p>
                 Have you ever felt worried that your party will not raise up to your guest expectations? In design, vertical rhythm is the structure that guides a reader's eye through the content. Good vertical rhythm makes a layout more balanced and beautiful and its
                 content more readable. The time signature in sheet music visually depicts a song's rhythm, while for us, the lines of the baseline grid depict the rhythm of our content and give us guidelines.
@@ -103,8 +101,8 @@
     <section class="specialties" id="specialties">
       <div class="container">
         <div class="heading text-center">
-          <h2>Our Skills</h2>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros. Etiam ullamcorper sed lectus sit amet mattis. Morbi justo sem, cursus nec convallis a, pellentesque eu mi. Morbi hendrerit ultricies ligula </h3>
+          <h2>My Skills</h2>
+          <h3> Write about my skills </h3>
         </div>
       </div>
 
@@ -113,35 +111,31 @@
           <div class="col-md-6 wow fadeInRight" data-wow-offset="0" data-wow-delay="0.3s" ">
 					<div class="skill ">
 						<div class="progress-wrap ">
-							<h3>Graphic Design</h3>
+							<h3>Data Analysis and Data Mining</h3>
 							<div class="progress ">
 							  <div class="progress-bar color1 " role="progressbar " aria-valuenow="40 " aria-valuemin="0 " aria-valuemax="100 " style="width: 85% ">
 								<span class="bar-width ">85%</span>
 							  </div>
-
 							</div>
 						</div>
-
 						<div class="progress-wrap ">
-							<h3>HTML</h3>
+							<h3>Artificial Intelligence and Machine Learning</h3>
 							<div class="progress ">
 							  <div class="progress-bar color2 " role="progressbar " aria-valuenow="20 " aria-valuemin="0 " aria-valuemax="100 " style="width: 95% ">
 							   <span class="bar-width ">95%</span>
 							  </div>
 							</div>
 						</div>
-
 						<div class="progress-wrap ">
-							<h3>CSS</h3>
+							<h3>Python</h3>
 							<div class="progress ">
 							  <div class="progress-bar color3 " role="progressbar " aria-valuenow="60 " aria-valuemin="0 " aria-valuemax="100 " style="width: 80% ">
 								<span class="bar-width ">80%</span>
 							  </div>
 							</div>
 						</div>
-
 						<div class="progress-wrap ">
-							<h3>Wordpress</h3>
+							<h3>SPSS</h3>
 							<div class="progress ">
 							  <div class="progress-bar color4 " role="progressbar " aria-valuenow="80 " aria-valuemin="0 " aria-valuemax="100 " style="width: 90% ">
 								<span class="bar-width ">90%</span>
@@ -150,7 +144,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="col-md-6 wow fadeInRight " data-wow-offset="0 " data-wow-delay="0.6s "">
             <img src="img/team/6.jpg" class="img-responsive">
           </div>
@@ -161,25 +154,25 @@
         <div class="row">
           <div class="col-md-4">
             <div class="skills">
-              <h3 class="main text-center">WEB DESIGN</h3>
+              <h3 class="main text-center">Statistical Data Analysis</h3>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/2.png)">
                 </div>
-                <h5>HTML</h5>
+                <h5>SPSS/Excel</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/2.png)">
                 </div>
-                <h5>CSS</h5>
+                <h5>Python</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/2.png)">
                 </div>
-                <h5>JAVASCRIPT</h5>
+                <h5>R</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
@@ -187,25 +180,25 @@
           </div>
           <div class="col-md-4">
             <div class="skills">
-              <h3 class="main text-center">PHOTOGRAPHY</h3>
+              <h3 class="main text-center">Machine Learning</h3>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/2.png)">
                 </div>
-                <h5>adipiscing elit</h5>
+                <h5>Python</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/2.png)">
                 </div>
-                <h5>adipiscing elit</h5>
+                <h5>Amazon Web Services</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/2.png)">
                 </div>
-                <h5>adipiscing elit</h5>
+                <h5>Wika</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
@@ -217,21 +210,21 @@
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/2.png)">
                 </div>
-                <h5>adipiscing elit</h5>
+                <h5>Python</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/2.png)">
                 </div>
-                <h5>adipiscing elit</h5>
+                <h5>Java</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/2.png)">
                 </div>
-                <h5>adipiscing elit</h5>
+                <h5>javaScript</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
@@ -576,11 +569,9 @@
           topMargin: 'auto'
         });
       });
-
       //Google Map
       var get_latitude = $('#google-map').data('latitude');
       var get_longitude = $('#google-map').data('longitude');
-
       function initialize_google_map() {
         var myLatlng = new google.maps.LatLng(get_latitude, get_longitude);
         var mapOptions = {
