--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                       <ul class="nav navbar-nav">
                         <li class="menuItem active"><a href="#wrapper">Home</a></li>
                         <li class="menuItem"><a href="#aboutus">About Me</a></li>
+						<li class="menuItem"><a href="#aboutus">Quick Links</a></li>
                         <li class="menuItem"><a href="#specialties">Skills</a></li>
                         <li class="menuItem"><a href="#gallery">Portfolio</a></li>
                         <li class="menuItem"><a href="#feedback">Education</a></li>
@@ -70,8 +71,7 @@
           <div class="col-md-6">
             <div class="papers text-center">
               <img src="img/team/1.jpg" alt=""><br/>
-              <a href="#"><b>Download My Resume</b></a>
-              <h4 class="">My Colleague Sean Healy</h4>
+              <h4 class="">Sean Healy(Developer @ Webio)</h4>
               <p>
                 Monika is an amazing data scientist and Developer. I worked with her in Webio and I must say she is a very good team player. She is a hard working and very serious team player. She certainly can get my full recommendation.
               </p>
@@ -80,8 +80,7 @@
           <div class="col-md-6">
             <div class="papers text-center">
               <img src="img/team/2.jpg" alt=""><br/>
-              <a href="#"><b>Download my resume</b></a>
-              <h4 class="">My Colleague David Power</h4>
+              <h4 class="">David Power(Developer @ Webio)</h4>
               <p>
                 I had the privilege of working with Monika in Webio. She is proactive, technically sound and responsible employee. She is amazing in Machine Learning and AI stuff. She is always ready to put all her energy and time to get the job done.
               </p>
@@ -97,7 +96,7 @@
       <div class="container">
         <div class="heading text-center">
           <h2>My Skills</h2>
-          <h3> Excel at creating data driven systems and have experience in statistical programming, machine learning, NLP, Al, and data mining.Supervised, Semi Supervised and nsupervised machine learning using Python scikit learn and Amazon Machine learning. Good understanding of CNNs, RNNs, reinforcement learning. </h3>
+          <h3> I am excel at creating data driven systems and have experience in statistical programming, machine learning, NLP, Al, and data mining.I have good knowledge of Supervised, Semi Supervised and Unsupervised machine learning algorithms using Python scikit learn and Amazon Machine learning. Good understanding of CNNs, RNNs, reinforcement learning. </h3>
         </div>
       </div>
 
@@ -180,7 +179,7 @@
                 <div class="rm-thumb" style="background-image: url(img/21.png)">
                 </div>
                 <h5>Python</h5>
-                <p>Supervised, semi supervised and unsupervised machine learning using Python scikit learn. Good understanding of CNNs, RNNs, reinforcement learning.
+                <p>Implementation of machine learning algorithms and Deep Learning Neural Networks e.g CNNs, RNNs, reinforcement learning using Python programming.
                 </p>
               </div>
               <div class="restitem clearfix">
@@ -194,7 +193,7 @@
                 <div class="rm-thumb" style="background-image: url(img/21.png)">
                 </div>
                 <h5>Wika</h5>
-                <p> Used Wika for data pre-processing, classification, regression, clustering, association rules and visualization. Weka is a collection of machine learning algorithms for data mining tasks.
+                <p> Used Wika for data pre-processing, classification, regression, clustering, association rules and visualization.
                 </p>
               </div>
             </div>
@@ -394,7 +393,7 @@
         <div class="col-md-4 wow fadeInRight" data-wow-offset="0" data-wow-delay="0.3s">
           <div class="text-center">
             <div class="hi-icon-wrap hi-icon-effect">
-              <h4>MASTERS IN COMPUTING(DATA ANALYTICS)</h4>
+              <h4>MASTERS IN COMPUTING</h4>
               <h5>Sep 2016 - Nov 2017</h5>
               <i class="fa fa-laptop"></i>
               <p>Dublin City University</p>
