--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
                 <div class="rm-thumb" style="background-image: url(img/21.png)">
                 </div>
                 <h5>Python</h5>
-                <p>Implementation of machine learning algorithms and Deep Learning Neural Networks e.g CNNs, RNNs, reinforcement learning using Python programming.
+                <p>Implementation of machine learning algorithms and Deep Learning Neural Networks using Python programming.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/21.png)">
                 </div>
                 <h5>Amazon Web Services</h5>
-                <p>Hands On Experience with Amazon Web Services like Amazon Machine Learning, Amazon Lex, Amazon Polly, Amazon Translate, Amazon S3, Amazon Comprehend etc. 
+                <p>Hands On Experience with Amazon Web Services like Amazon Machine Learning, Amazon Lex, Amazon Polly, Translate etc. 
                 </p>
               </div>
               <div class="restitem clearfix">
@@ -234,7 +234,7 @@
       <div class="container">
         <div class="heading text-center">
           <h2>Portfolio</h2>
-          <h3> Below is a collection of projects, as well as work experience.</h3>
+          <h3> Below is a collection of projects, as well as my work experience.</h3>
         </div>
 
         <div id="grid-gallery" class="grid-gallery">
@@ -393,7 +393,7 @@
         <div class="col-md-4 wow fadeInRight" data-wow-offset="0" data-wow-delay="0.3s">
           <div class="text-center">
             <div class="hi-icon-wrap hi-icon-effect">
-              <h4>MASTERS IN COMPUTING</h4>
+              <h4>MASTERS IN COMPUTING (Data Analytics)</h4>
               <h5>Sep 2016 - Nov 2017</h5>
               <i class="fa fa-laptop"></i>
               <p>Dublin City University</p>
