--- a/index.html
+++ b/index.html
@@ -150,21 +150,21 @@
             <div class="skills">
               <h3 class="main text-center">Statistical Data Analysis</h3>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/21.png)">
+                <div class="rm-thumb" style="background-image: url(img/spss.png)">
                 </div>
                 <h5>SPSS/Excel</h5>
                 <p>Good understanding of Statistical packages which I used for complex data analysis and manipulation like SPSS, SAS, and Excel.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/21.png)">
+                <div class="rm-thumb" style="background-image: url(img/python.png)">
                 </div>
                 <h5>Python</h5>
                 <p> Experience in Data Analysis using python pandas. Good knowledge of various python libraries which are used in Data Analysis like Scipy and NumPy.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/21.png)">
+                <div class="rm-thumb" style="background-image: url(img/r.png)">
                 </div>
                 <h5>R</h5>
                 <p>Performed statistical analysis of data which includes Correlation, Logistic regression, Anova test, Hypothesis testing, outlier detection etc using R.
@@ -176,23 +176,23 @@
             <div class="skills">
               <h3 class="main text-center">Machine Learning</h3>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/21.png)">
+                <div class="rm-thumb" style="background-image: url(img/python.png)">
                 </div>
                 <h5>Python</h5>
                 <p>Implementation of machine learning algorithms and Deep Learning Neural Networks using Python programming.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/21.png)">
+                <div class="rm-thumb" style="background-image: url(img/aws.png)">
                 </div>
                 <h5>Amazon Web Services</h5>
                 <p>Hands On Experience with Amazon Web Services like Amazon Machine Learning, Amazon Lex, Amazon Polly, Translate etc. 
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/21.png)">
+                <div class="rm-thumb" style="background-image: url(img/weka.png)">
                 </div>
-                <h5>Wika</h5>
+                <h5>Weka</h5>
                 <p> Used Wika for data pre-processing, classification, regression, clustering, association rules and visualization.
                 </p>
               </div>
@@ -202,23 +202,23 @@
             <div class="skills">
               <h3 class="main text-center">PROGRAMMING</h3>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/21.png)">
+                <div class="rm-thumb" style="background-image: url(img/python.png)">
                 </div>
                 <h5>Python</h5>
                 <p> Mostly used Python in Data analysis and machine learning problems. Good understanding of the basics of python programming language.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/21.png)">
+                <div class="rm-thumb" style="background-image: url(img/java.png)">
                 </div>
                 <h5>Java</h5>
                 <p> One of my favourate programming language. Mostly used in developing web applications.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/21.png)">
+                <div class="rm-thumb" style="background-image: url(img/js.png)">
                 </div>
-                <h5>javaScript</h5>
+                <h5>JavaScript</h5>
                 <p> Client side multi-paradigm scripting language. It is dynamic and supports object oriented and functional programming. 
                 </p>
               </div>
