--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <figure>
                   <img src="img/work/1.jpg" alt="" />
                   <figcaption>
-                    <h3>Stock Market Prediction Using Sentiment Analysis</h3>
+                    <h3>Stock Market Prediction (sentiment Analysis)</h3>
                     <p>Final Year Masters Thesis</p>
                   </figcaption>
                 </figure>
@@ -273,7 +273,7 @@
                 <figure>
                   <img src="img/work/4.jpg" alt="" />
                   <figcaption>
-                    <h3>Network Defence Policies with Flexible Group Key Agreement Protocol</h3>
+                    <h3>Secure Network by Group Key Agreement Protocol</h3>
                     <p>Masters Dissertation</p>
                   </figcaption>
                 </figure>
@@ -283,7 +283,7 @@
                   <img src="img/work/5.jpg" alt="" />
                   <figcaption>
                     <h3>AI/ML Developer</h3>
-                    <p>Webio: Conversational MiddleWare Company </p>
+                    <p>Webio</p>
                   </figcaption>
                 </figure>
               </li>
@@ -302,7 +302,7 @@
                   <img src="img/work/7.jpg" alt="" />
                   <figcaption>
                     <h3>Intern</h3>
-                    <p>International Maize and Wheat Improvement Centre</p>
+                    <p>CYMMIT</p>
                   </figcaption>
                 </figure>
               </li>
@@ -393,7 +393,7 @@
         <div class="col-md-4 wow fadeInRight" data-wow-offset="0" data-wow-delay="0.3s">
           <div class="text-center">
             <div class="hi-icon-wrap hi-icon-effect">
-              <h4>MASTERS IN COMPUTING (Data Analytics)</h4>
+              <h4>MASTERS IN COMPUTING      (Data Analytics)</h4>
               <h5>Sep 2016 - Nov 2017</h5>
               <i class="fa fa-laptop"></i>
               <p>Dublin City University</p>
