--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                       <ul class="nav navbar-nav">
                         <li class="menuItem active"><a href="#wrapper">Home</a></li>
                         <li class="menuItem"><a href="#aboutus">About Me</a></li>
-						<li class="menuItem"><a href="#aboutus">Quick Links</a></li>
+						<li class="menuItem"><a href="#Quick Links">Quick Links</a></li>
                         <li class="menuItem"><a href="#specialties">Skills</a></li>
                         <li class="menuItem"><a href="#gallery">Portfolio</a></li>
                         <li class="menuItem"><a href="#feedback">Education</a></li>
@@ -89,7 +89,50 @@
         </div>
       </div>
     </section>
+<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
+
+<!-- Quick Links Section -->
+<section id="links">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Quick Links</h2>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-md-3">
+                <div class="team-member">
+                    <a href="https://github.com/Monika-Kumar" target="_blank"><img src="img/GitHubB1.png" class="img-responsive img-circle" title="GitHub"></a>
+                </div>
+                <h4 class="service-heading">GitHub</h4>
+            </div>
+            <div class="col-md-3">
+                <div class="team-member">
+                    <a href="https://www.hackerrank.com/MonikaKumar" target="_blank"><img src="img/Hack4.png" class="img-responsive img-circle" title="HackerRank"></a>
+                </div>
+                <h4 class="service-heading">HackerRank</h4>
+            </div>
+            <div class="col-md-3">
+                <div class="team-member">
+                    <a href="www.linkedin.com/in/monikakumar29" target="_blank"><img src="img/LinkedIn3.png" class="img-responsive img-circle" title="LinkedIn"></a>
+                </div>
+                <h4 class="service-heading">LinkedIn</h4>
+            </div>
+            <div class="col-md-3">
+               <div class="team-member">
+                    <a href="img/header/DavidPowerResume.pdf" target="_blank"><img src="img/CV3.png" class="img-responsive img-circle" title="CV"></a>
+                </div>
+                <h4 class="service-heading">Curriculum Vitae</h4>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
     <!--skills-->
     <section class="specialties" id="specialties">
