--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         <li class="menuItem"><a href="#specialties">Skills</a></li>
                         <li class="menuItem"><a href="#gallery">Portfolio</a></li>
                         <li class="menuItem"><a href="#feedback">Education</a></li>
+                        <li class="menuItem"><a href="#feedback">References</a></li>
                         <li class="menuItem"><a href="#contact">Contact</a></li>
                       </ul>
                     </div>
@@ -64,30 +65,10 @@
     <section class="aboutus" id="aboutus">
       <div class="container">
         <div class="heading text-center">
+            <p>  </p>
           <h2>About Me</h2>
           <h3>Hi!. I am Monika Kumar. I am a Artificial Intelligence Enthusiast. I am Masters in data Analytics and an another Masters in Computer Application. I am having 4 years of combined experience in programming, testing, Dubbing, Data analysis, and machine learning. I am Excel in creating data driven systems and has proven skills in statistical programming, machine learning, Artificial Intelligence and Natural Language Processing. I served as part of global teams, working to deliver high quality products and services to various clients. With my wide-ranging technical skills and superior capacity to tackle time-sensitive projects I proved to deliver best-in-class customer service. </h3>
         </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="papers text-center">
-              <img src="img/team/1.jpg" alt=""><br/>
-              <h4 class="">Sean Healy(Developer @ Webio)</h4>
-              <p>
-                Monika is an amazing data scientist and Developer. I worked with her in Webio and I must say she is a very good team player. She is a hard working and very serious team player. She certainly can get my full recommendation.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="papers text-center">
-              <img src="img/team/2.jpg" alt=""><br/>
-              <h4 class="">David Power(Developer @ Webio)</h4>
-              <p>
-                I had the privilege of working with Monika in Webio. She is proactive, technically sound and responsible employee. She is amazing in Machine Learning and AI stuff. She is always ready to put all her energy and time to get the job done.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
 <!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
@@ -115,7 +96,7 @@
             </div>
             <div class="col-md-3">
                 <div class="team-member">
-                    <a href="www.linkedin.com/in/monikakumar29" target="_blank"><img src="img/LinkedIn3.png" class="img-responsive img-circle" title="LinkedIn"></a>
+                    <a href="https://ie.linkedin.com/in/monikakumar29" target="_blank"><img src="img/LinkedIn3.png" class="img-responsive img-circle" title="LinkedIn"></a>
                 </div>
                 <h4 class="service-heading">LinkedIn</h4>
             </div>
@@ -466,15 +447,30 @@
           </div>
         </div>
       </div>
-
-      <div class="container">
-        <div class="row">
-          <blockquote>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages." <cite>Jogn De, Programming<br/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></cite>            </blockquote>
-          <blockquote>Have you ever felt worried that your party will not raise up to your guest expectations? In design, vertical rhythm is the structure that guides a reader’s eye through the content. Good vertical rhythm makes a layout more balanced and beautiful
-            and its content more readable. The time signature in sheet music visually depicts a song’s rhythm, while for us, the lines of the baseline grid depict the rhythm of our content and give us guidelines. <cite>Marta Kay, Business Development<br/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></cite>            </blockquote>
+<!---------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<div class="row">
+        <div class="col-md-6">
+          <div class="papers text-center">
+            <img src="img/team/1.jpg" alt=""><br/>
+            <h4 class="">Sean Healy(Developer @ Webio)</h4>
+            <p>
+              Monika is an amazing data scientist and Developer. I worked with her in Webio and I must say she is a very good team player. She is a hard working and very serious team player. She certainly can get my full recommendation.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="papers text-center">
+            <img src="img/team/2.jpg" alt=""><br/>
+            <h4 class="">David Power(Developer @ Webio)</h4>
+            <p>
+              I had the privilege of working with Monika in Webio. She is proactive, technically sound and responsible employee. She is amazing in Machine Learning and AI stuff. She is always ready to put all her energy and time to get the job done.
+            </p>
+          </div>
         </div>
       </div>
+    </div>
+
+<!---------------------------------------------------------------------------------------------------------------------------------------------------------------->      
     </section>
 
     <!--education-->
@@ -486,14 +482,6 @@
 				 </h3>
         </div>
       </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-7">
-            <div class="map">
-              <div id="google-map" data-latitude="40.713732" data-longitude="-74.0092704"></div>
-            </div>
-          </div>
 
           <div class="contact-info">
             <div class="col-md-5">
