--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <div class="container">
         <div class="heading text-center">
             <p>  </p>
+            <p>  </p>
           <h2>About Me</h2>
           <h3>Hi!. I am Monika Kumar. I am a Artificial Intelligence Enthusiast. I am Masters in data Analytics and an another Masters in Computer Application. I am having 4 years of combined experience in programming, testing, Dubbing, Data analysis, and machine learning. I am Excel in creating data driven systems and has proven skills in statistical programming, machine learning, Artificial Intelligence and Natural Language Processing. I served as part of global teams, working to deliver high quality products and services to various clients. With my wide-ranging technical skills and superior capacity to tackle time-sensitive projects I proved to deliver best-in-class customer service. </h3>
         </div>
@@ -297,7 +298,7 @@
                 <figure>
                   <img src="img/work/4.jpg" alt="" />
                   <figcaption>
-                    <h3>Secure Network by Group Key Agreement Protocol</h3>
+                    <h3>Secure Network by Group Key Protocol</h3>
                     <p>Masters Dissertation</p>
                   </figcaption>
                 </figure>
@@ -409,7 +410,7 @@
         <div class="heading">
           <h2>Education</h2>
           <h3>My Degrees in Various Universities.<br>
-				An investment in knowledge pays the best interest</h3>
+			</h3>
         </div>
       </div>
 
@@ -458,6 +459,17 @@
             </p>
           </div>
         </div>
+
+        <div class="col-md-6">
+                <div class="papers text-center">
+                  <img src="img/team/1.jpg" alt=""><br/>
+                  <h4 class="">Sean Healy(Developer @ Webio)</h4>
+                  <p>
+                    Monika is an amazing data scientist and Developer. I worked with her in Webio and I must say she is a very good team player. She is a hard working and very serious team player. She certainly can get my full recommendation.
+                  </p>
+                </div>
+        </div>
+        
         <div class="col-md-6">
           <div class="papers text-center">
             <img src="img/team/2.jpg" alt=""><br/>
